ingress/ingress-grafana-http.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana-http
  namespace: monitoring
spec:
  rules:
  - host: m.test.com
    http:
      paths: 
      - backend:
           serviceName: grafana
           servicePort: 3000
